--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/FrmMain.resx
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/FrmMain.resx
@@ -135,4 +135,7 @@
   <metadata name="BWorkerTcpServerUpdatingClientList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>864, 17</value>
   </metadata>
+  <metadata name="BWorkerRenameFilenames.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>64, 41</value>
+  </metadata>
 </root>
